<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:enabled="true"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/label_nav_home"/>
    <item
        android:id="@+id/nav_cart"
        android:enabled="true"
        android:icon="@drawable/ic_nav_cart"
        android:title="@string/label_nav_cart"/>
    <item
        android:id="@+id/nav_history"
        android:enabled="true"
        android:icon="@drawable/ic_nav_history"
        android:title="@string/label_nav_history"/>
    <item
        android:id="@+id/nav_profile"
        android:enabled="true"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/label_nav_profile"/>
</menu>
