<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_toolbar_order_history"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/label_toolbar_profile"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:background="@drawable/rounded_top_profile"
                android:layout_height="wrap_content">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/siv_profile"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_placeholder"
                    android:layout_marginTop="12dp"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/label_name_bahtiar"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_nim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/label_nim"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:layout_marginBottom="12dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_profile"
                android:orientation="vertical"
                android:padding="24dp"
                app:layout_constraintTop_toTopOf="@+id/guideline_profile">

                <!--Keamanan-->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/label_keamanan"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:drawableTint="@color/colorPrimary" />


                <TextView
                    android:id="@+id/tv_change_pin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/poppins_regular"
                    android:padding="4dp"
                    android:text="@string/label_ganti_pin"
                    android:textColor="@color/black"
                    app:drawableEndCompat="@drawable/ic_arrow_right_black" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/lineGrey" />

                <TextView
                    android:id="@+id/tv_face_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/poppins_regular"
                    android:padding="4dp"
                    android:text="@string/label_face_id"
                    android:textColor="@color/black"
                    app:drawableEndCompat="@drawable/ic_arrow_right_black" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/lineGrey" />

                <!--Bantuan-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/label_bantuan"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:drawableTint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/tv_help_chat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/poppins_regular"
                    android:padding="4dp"
                    android:text="@string/label_bantuan_chat"
                    android:textColor="@color/black"
                    app:drawableEndCompat="@drawable/ic_arrow_right_black" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/lineGrey" />

                <TextView
                    android:id="@+id/tv_help_center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/poppins_regular"
                    android:padding="4dp"
                    android:text="@string/label_bantuan_pusat"
                    android:textColor="@color/black"
                    app:drawableEndCompat="@drawable/ic_arrow_right_black" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/lineGrey" />


                <TextView
                    android:id="@+id/tv_term_condition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/poppins_regular"
                    android:padding="4dp"
                    android:text="@string/label_syarat"
                    android:textColor="@color/black"
                    app:drawableEndCompat="@drawable/ic_arrow_right_black" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/lineGrey" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_action"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:fontFamily="@font/poppins_semibold"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/label_keluar"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    app:cornerRadius="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password" />

            </LinearLayout>
        </LinearLayout>




    </ScrollView>

</LinearLayout>
